--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 									</header>
 									<div class="container">
 										<div class="row aln-center">
-											<div class="slider-3">
+											<div class="slider">
 												<div class= "slide-track">
 												   <div class="slide">
 													   <img src="images/Award Logos/2019-Global-CEO-Excellence-Awards-Logo-no-date-768x162.png">
