added responsiveness to the layout of the footer element and added a generic page to fill in content

--- a/generic.html
+++ b/generic.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Momentum by Pixelarity
-	pixelarity.com | hello@pixelarity.com
-	License: pixelarity.com/license
--->
 <html>
 	<head>
-		<title>Untitled</title>
+		<title>Generic</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
@@ -25,28 +20,23 @@
 							<li>
 								<a href="#" class="dropdown">Dropdown</a>
 								<ul>
-									<li><a href="#">Option One</a></li>
-									<li><a href="#">Option Two</a></li>
-									<li><a href="#">Option Three</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option One</a></li>
-											<li><a href="#">Option Two</a></li>
-											<li><a href="#">Option Three</a></li>
-											<li><a href="#">Option Four</a></li>
-										</ul>
-									</li>
+									<li><a href="#">One</a></li>
+									<li><a href="#">Two</a></li>
+									<li><a href="#">Three</a></li>
 								</ul>
 							</li>
 							<li class="current"><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="#">Generic</a></li>
 						</ul>
 					</nav>
 
 				<!-- Logo -->
-					<a class="logo" href="index.html">Momentum <span>by Pixelarity</span></a>
-					<h1>Generic Page</h1>
+				<a class="logo" href="index.html"><img id="logo" src="images/BA-logo.png"></a>
+				<div id="showcase">
+					<video src="images/video/video.mp4" muted loop autoplay></video>
+					<div class="overlay"></div>
+				</div>
+					<h1>WHAT WE DO?</h1>
 			</header>
 
 		<!-- Main -->
@@ -65,20 +55,23 @@
 			</div>
 
 		<!-- Three -->
-			<section id="newsletter">
-				<div class="wrapper style2 special">
-					<div class="inner">
-						<header>
-							<h2>Sapien mauris blandit?</h2>
-							<p>Lorem ipsum dolor mauris, consectetur id ipsum sit amet lorem sed amet consequat.</p>
-						</header>
-						<form method="post" action="#" class="combined">
-							<input type="email" name="email" id="email" placeholder="Your email address" class="invert" />
-							<input type="submit" class="special" value="Subscribe" />
-						</form>
-					</div>
+		<section id="three">
+			<div class="wrapper style2 special">
+				<div class="inner">
+					<h2 class="alt"><span id="contact-header">
+						Get Our Diversity
+							Media & Insights Deck
+					</span></h2>
+					<form method="post" action="#" class="combined">
+						<input type="email" name="email" id="email" placeholder="Your email address" class="invert" />
+						<input type="submit" class="special" value="Subscribe" />
+					</form>
 				</div>
-			</section>
+				<div id="showcase3">
+					<video src="images/video/production ID_4646328.mp4" muted loop autoplay></video>
+				</div>
+			</div>
+		</section>
 
 		<!-- Footer -->
 			<section id="footer">
