--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 							<img src="images/pic02.jpg" alt="" />
 						</div>
 						<div class="content">
-							<h2 class="alt"><a href="#">WHAT - WE DO</a></h2>
+							<h2 class="alt"><a href="generic.html">WHAT - WE DO</a></h2>
 							<ul class="actions">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="generic.html" class="button">Learn More</a></li>
 							</ul>
 						</div>
 					</article>
